# fatapi_social

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: 7c9776ee2a59_init.py  8ecad2e63aba_create_user_post.py  e033cbc5138e_.py
app/: db.py
app/core/: config.py  dependencies.py  models.py  schemas.py
app/core/endpoints/: post.py  user.py
