[tool.poetry]
name = "fatapi-social"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"
packages = [{include = "fatapi_social"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {version = "1.7.4", extras = ["email"]}
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.17"
python-dotenv = "^1.0.0"
redis = "^4.6.0"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
pyjwt = "^2.7.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
