[tool.poetry]
name = "fatapi-social"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {version = "1.10.10", extras = ["email"]}
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.17"
python-dotenv = "^1.0.0"
redis = "^4.6.0"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
